RESOLVED FIXED 277772
[Win WebKitTestRunner] testRunner.setOpenPanelFiles doesn't work with Windows absolute file path
https://bugs.webkit.org/show_bug.cgi?id=277772
Summary [Win WebKitTestRunner] testRunner.setOpenPanelFiles doesn't work with Windows...
Fujii Hironori
Reported 2024-08-07 14:38:26 PDT
[Win WebKitTestRunner] testRunner.setOpenPanelFiles doesn't work for http tests http/tests/misc/form-submit-file-cross-site-redirect.html http/tests/misc/form-submit-file-cross-site.html http/wpt/service-workers/file-upload.html http/wpt/service-workers/form-data-upload.html My guess is that TestRunner::setOpenPanelFiles should handle a Windows absolute file path. https://github.com/WebKit/WebKit/blob/ebea209afc66421f045f69e648b3ac382076b9bf/Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp#L1821
Attachments
Fujii Hironori
Comment 1 2024-08-07 18:35:55 PDT
EWS
Comment 2 2024-08-08 21:57:39 PDT
Committed 282032@main (2bbf0fb389fb): <https://commits.webkit.org/282032@main> Reviewed commits have been landed. Closing PR #31877 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-08-08 21:58:14 PDT
Note You need to log in before you can comment on or make changes to this bug.