[Win WebKitTestRunner] TestRunner::setOpenPanelFiles should accept a Windows absolute file path https://bugs.webkit.org/show_bug.cgi?id=277772

Reviewed by Ross Kirsling.

Windows port failed some layout tests which create a temporary file
and passes the absolute path to testRunner.setOpenPanelFiles.
https://commits.webkit.org/220142@main added the absolute path support
of setOpenPanelFiles by checking a leading forward slash character for
Unix.

Use PathIsRelativeA and UrlCreateFromPathA API for Windows.

Additionally, a temporarily created WKURLRef object of "file://" was
leaked, Use WKRetainPtr<WKURLRef> and adoptWK for it.

* LayoutTests/platform/win/TestExpectations:
* Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::makeOpenPanelURL):
(WTR::TestRunner::setOpenPanelFiles):

Canonical link: https://commits.webkit.org/282032@main